<resources>
    <string name="app_name">DS_Fitness</string>
    <string name="textView_enter_username">Username</string>
    <string name="textView_enter_password">Password</string>
    <string name="editText_enter_username"></string>
    <string name="btn_login_text">Login</string>
    <string name="btn_sign_up_text">Sign up</string>

    <string name="bmi_calculator">BMI Calculator</string>
    <string name="todo">TODO</string>
    <string name="nutrition_plans">Nutrition Plans</string>
    <string name="workout_plans">Workout Plans</string>
    <string name="activity_tracking">Activity Tracking</string>
    <string name="quotes">Success usually comes to those who are too busy to be looking for it.</string>
    <string name="quote_of_the_day">Quote of the Day</string>
    <string name="sign_off">Sign out</string>
    <string name="ThoreauQuote">“Success usually comes to those who are too busy to be looking for it.” by Henry David Thoreau</string>
    <string name="text_username_text">username</string>
    <string name="enter_an_email_address">Email address</string>

	<string name="personal_best">Personal Best</string>
    <string name="activity">Activity</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="steps">Steps</string>
    <string name="_6_478_steps">6,478 steps</string>
    <string name="_247">247</string>
    <string name="walking_running">Walking / running</string>
    <string name="_4_8_km">4.8 km</string>
    <string name="_273">273</string>
    <string name="cycling">Cycling</string>
    <string name="_31_6_km">31.6 km</string>
    <string name="_1023">1023</string>
    <string name="_30_floors">30 floors</string>
    <string name="flights_climbed">Flights Climbed</string>
    <string name="_195">195</string>
    <string name="swimming">Swimming</string>
    <string name="_0">0</string>
    <string name="_0">0</string>
    <string name="_1_738">1,738</string>
    <string name="total_calories_burned_today">Total calories burned today:</string>
    <string name="well_done_you_made_it_through_the_day_keep_it_up">Well done, you made it through the day. Keep it up!!!</string>
	
    <string name="Work_Out_Plan_One">Work out plan 1: \n 1. Press ups- 30 seconds (do as many reps as you can) repeat exercise twice:\n a. Start in a planked position.\n b. Place each hand as wide as comfortable.\n c. Slowly lower your chest to the floor, make sure your abs are \n tight and back is flat.\n d. Slowly push back up towards your start position and repeat. \n\n 2. Lunges- 30 seconds (do as many reps for duration) repeat exercise twice: \n a. Stand with feet shoulder width apart.\n b. Step forward with one leg and lower into a lunge, bending both knees, keep upright and don’t lean over your toes.\n c. Drive into your front heel and push back up to standing.\n d. Repeat by stepping forward with opposite leg into another stride and lunge.\n\n 3. Squat- 30 seconds (perform as many reps as you can) repeat exercise twice:\n a. Stand up straight with feet slightly wider than hip distance, with your feet turned out.\n b. Look straight ahead and tighten your abs. bend your knees and sink your hips back while lowering hips to the floor until you reach just below your knees. Keep you back straight and core tight throughout the movement.\n c. Briefly hold the position, before straightening your legs and pushing back up to standing.\n\n 4. Plank- 30 seconds (hold for full 30 seconds) repeat this twice:\n a. Start in press up position.\n b. Bend your elbows until your forearms are on the floor and your body is held straight.\n c. Keep your abs tight and keep your back in a neutral position.\n d. Hold this for 30 second timer.\n</string>
    <string name="Work_Out_Plan_Two">Work out plan 2: \n 1.	Sit ups- 30 seconds (perform as many reps as possible) repeat the exercise twice:\n a.	Start flat on your back with your knees bent at 90 degrees.\n b.	Keep your feet flat and straighten out your arms.\n c.	Slowly curl your torso, raising your head and shoulders and slide your hands up along your thighs to your knees.\n d.	Lower yourself back to the floor and repeat again.\n\n 2.	Side bridge- 30 seconds(hold for the full 30 seconds) hold on each side:\n a.	Place your elbow flat on the floor.\n b.	Raise your hips up and make sure your body is straight.\n c.	Hold this position and tighten your core.\n\n 3.	Burpees- 30 seconds(do as many reps as you can) repeat this twice:\n a.	Stand with feet shoulder width apart and arms at sides.\n b.	Push your hips back, bend knees and lower into a squat.\n c.	Place hands on the floor in front of your feet and then jump back and straighten your legs.\n d.	Your body should be a straight line from head to heels and keep your abs tight.\n e.	Jump your feet back in so they are just by hands again, then reach up and explode into the air. \n f.	Repeat this movement.\n\n 4.	Bicycle crunches- 30 seconds (perform as many reps as possible) repeat exercise twice:\n a.	Lie flat on the floor with back pressed against the floor.\n b.	Put your hands behind your head, bring knees towards chest and lift your shoulder blades off the ground.\n c.	Straighten your right leg out to 45 degree angle to the ground while turning your upper body to the left and bring your right elbow over to your left knee.\n d.	Now switch sides and repeat the action.</string>
    <string name="Work_Out_Plan_Three">Work out plan 3:\n 1.	Mountain climbers- 30 seconds( perform as many as possible) repeat twice:\na.	Get into plank position, with hands shoulder width apart.\nb.	Keep your back flat and abs tight, pull your right knee towards your chest.\nc.	Then switch and pull your left knee towards your chest while putting the other knee back.\nd.	Keep your hips down and run knees in and out as fast as you can.\n\n2.	Star jumps- 30 seconds( perform as many as possible) repeat twice:\na.	Start with your hands by your side standing straight.\nb.	Then jump and extend your legs to the side while raising your arms at the same time.\nc.	Repeat movement for the 30 seconds.\n\n3.	Squat- 30 seconds (perform as many reps as you can) repeat exercise twice:\na.	Stand up straight with feet slightly wider than hip distance, with your feet turned out.\nb.	Look straight ahead and tighten your abs. bend your knees and sink your hips back while lowering hips to the floor until you reach just below your knees. Keep you back straight and core tight throughout the movement.\nc.	Briefly hold the position, before straightening your legs and pushing back up to standing.\n\n4.	Plank- 30 seconds (hold for full 30 seconds) repeat this twice:\na.	Start in press up position.\nb.	Bend your elbows until your forearms are on the floor and your body is held straight.\nc.	Keep your abs tight and keep your back in a neutral position.\nd.	Hold this for 30 second timer.</string>
    <string name="Work_Out_Plan_Four">Work out plan 4:\n 1.	Lunges- 30 seconds (do as many reps for duration) repeat exercise twice:\na.	Stand with feet shoulder width apart.\nb.	Step forward with one leg and lower into a lunge, bending both knees, keep upright and don’t lean over your toes.\nc.	Drive into your front heel and push back up to standing.\nd.	Repeat by stepping forward with opposite leg into another stride and lunge.\n\n2.	Bicycle crunches- 30 seconds (perform as many reps as possible) repeat exercise twice:\na.	Lie flat on the floor with back pressed against the floor.\nb.	Put your hands behind your head, bring knees towards chest and lift your shoulder blades off the ground.\nc.	Straighten your right leg out to 45 degree angle to the ground while turning your upper body to the left and bring your right elbow over to your left knee.\nd.	Now switch sides and repeat the action.\n\n3.	Side bridge- 30 seconds(hold for the full 30 seconds) hold on each side:\na.	Place your elbow flat on the floor.\nb.	Raise your hips up and make sure your body is straight.\nc.	Hold this position and tighten your core.\n\n4.	Burpees- 30 seconds(do as many reps as you can) repeat this twice:\na.	Stand with feet shoulder width apart and arms at sides.\nb.	Push your hips back, bend knees and lower into a squat.\nc.	Place hands on the floor in front of your feet and then jump back and straighten your legs.\nd.	Your body should be a straight line from head to heels and keep your abs tight.\ne.	Jump your feet back in so they are just by hands again, then reach up and explode into the air.\nf.	Repeat this movement.</string>
    <string name="Work_Out_Plan_Five">Work out plan 5:\n 1.	Mountain climbers- 30 seconds( perform as many as possible) repeat twice:\na.	Get into plank position, with hands shoulder width apart.\nb.	Keep your back flat and abs tight, pull your right knee towards your chest.\nc.	Then switch and pull your left knee towards your chest while putting the other knee back.\nd.	Keep your hips down and run knees in and out as fast as you can.\n\n2.	Plank- 30 seconds (hold for full 30 seconds) repeat this twice:\na.	Start in press up position.\nb.	Bend your elbows until your forearms are on the floor and your body is held straight.\nc.	Keep your abs tight and keep your back in a neutral position.\nd.	Hold this for 30 second timer.\n\n3.	Press ups- 30 seconds (do as many reps as you can) repeat exercise twice:\na.	Start in a planked position.\nb.	Place each hand as wide as comfortable.\nc.	Slowly lower your chest to the floor, make sure your abs are tight and back is flat.\nd.	Slowly push back up towards your start position and repeat.\n\n4.	Squat- 30 seconds (perform as many reps as you can) repeat exercise twice:\na.	Stand up straight with feet slightly wider than hip distance, with your feet turned out.\nb.	Look straight ahead and tighten your abs. bend your knees and sink your hips back while lowering hips to the floor until you reach just below your knees. Keep you back straight and core tight throughout the movement.\nc.	Briefly hold the position, before straightening your legs and pushing back up to standing.</string>
</resources>
