<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"

    android:background="@color/greyBackground"
    tools:context=".loginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/banner_rectangle"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <TextView
            android:id="@+id/textAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="DS Fitness"
            android:textSize="50sp"
            android:textColor="@color/colorTitleText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="@drawable/background_rectangle"
        android:padding="10dp"
        android:orientation="vertical">

        <!-- android:layout_width="wrap_content"-->
        <!---android:layout_height="wrap_content"-->


        <TextView
            android:id="@+id/textUsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_enter_username"/>

        <EditText
            android:id="@+id/username_edit_text"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_enter_username"/>

        <TextView
            android:id="@+id/textPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_enter_password"/>


        <EditText
            android:id="@+id/password_edit_text"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <LinearLayout
            android:id="@+id/linearlayout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Login"
                android:id="@+id/button_login"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sign up"
                android:id="@+id/button_sign_up"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/banner_rectangle"
        android:layout_height="0dp"
        android:layout_weight="0.4">

    </LinearLayout>

</LinearLayout>